# haskell-chart

./: cabal.project
chart-gi-cairo/: Chart-gi-cairo.cabal  Chart-gi-gtk.cabal
chart-gi-cairo/Graphics/Rendering/Chart/GI/: Gtk.hs
chart-gi-gtk/: Chart-gi-gtk.cabal  default.nix
chart-gi-gtk/Graphics/Rendering/Chart/GI/: Gtk.hs
chart-gtk3/: default.nix  shell.nix  stack.yaml
