Name: Chart-gi-cairo
Version: 1.9.1
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Cairo backend for Charts.
Description: Cairo backend for Charts.
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base >= 3 && < 5
               , old-locale
               , time, mtl, array
               , gi-cairo >= 1.0.18
               , colour >= 2.2.1 && < 2.4
               , data-default-class < 0.2
               , operational >= 0.2.2 && < 0.3
               , lens
               , Chart >= 1.9 && < 1.10

  Exposed-modules:
        Graphics.Rendering.Chart.Backend.GI.Cairo

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
