Name: Chart-gi-gtk
Version: 1.9.1
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Utility functions for using the chart library with GTK
Description: Utility functions for using the chart library with GTK
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base >=4.6 && <4.12
               , old-locale
               , time, mtl, array
               , gi-cairo >=1.0.18
               , data-default-class <0.2
               , colour >=2.2.1 && <2.4
               , haskell-gi-base >=0.21.0
               , gi-gdk >=3.0.15 && < 3.1
               , gi-gtk-hs >= 0.3.6.1 && <0.3.7
               , Chart >=1.9 && <1.10
               , Chart-gi-cairo >=1.9 && <1.10

  Exposed-modules:
        Graphics.Rendering.Chart.GI.Gtk

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
